# osilic

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
src/osilic/: __init__.py  model.py
