[project]
name = "osilic"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dinesh", email = "dineshr93@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["tabulate>=0.9.0"]

[project.scripts]
osilic = "osilic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
